--- a/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
@@ -19,5 +19,6 @@
         <app-modifier-image *ngIf="modifier.type == 'image'" [modifier]="modifier"></app-modifier-image>
         <app-modifier-color *ngIf="modifier.type == 'color'" [modifier]="modifier"></app-modifier-color>
         <app-modifier-text *ngIf="modifier.type == 'text'" [modifier]="modifier"></app-modifier-text>
+        <app-modifier-svg *ngIf="modifier.type == 'svg'" [modifier]="modifier"></app-modifier-svg>
     </div>
 </div>
