--- a/src/app/creator/gameform/design/modifiers/modifier-svg/modifier-svg.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier-svg/modifier-svg.component.html
@@ -1,3 +1,10 @@
 <div class="col s12">
     <app-align-selector (verticalChange)="onVerticalChange($event)" (horizontalChange)="onHorizontalChange($event)"></app-align-selector>
+    <div class=" zoom valign-wrapper">
+        <i class="material-icons col s2 valign grey-text">expand_more</i>
+        <p class="range-field col s6 valign">
+            <input type="range" (input)="changeSize($event.target.value)" (change)="changeSize($event.target.value)" [value]="50"  min="10" max="300" step="2"  />
+        </p>
+        <i class="material-icons col s2 valign grey-text">expand_less</i>
+    </div>
 </div>
