--- a/src/app/creator/gameform/design/drawer/drawer.component.css
+++ b/src/app/creator/gameform/design/drawer/drawer.component.css
@@ -25,6 +25,7 @@
 }
 
 .component{
+    position:relative;
     width: 130px;
     height: 155px;
     margin: 7px;
@@ -51,6 +52,12 @@
     margin: 7px;
 }
 
+.component i{
+    position:absolute;
+    top: 10px;
+    right: 5px;
+    color: purple;
+}
 
 .BIeccA {
     background: transparent;
