--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -11,6 +11,8 @@
     <div class="component" *ngFor="let component of components" cdkDrag [cdkDragData]="component">
       <img src="{{component.imagem}}" class="component-image" alt="">
       <p>{{component.name}}</p>
+      <i (click)="removeComponent(component)" class="material-icons white-text link right">delete</i>
+
     </div>
   </div>
 </div>
