--- a/src/app/creator/gameform/design/text/text.component.html
+++ b/src/app/creator/gameform/design/text/text.component.html
@@ -22,6 +22,8 @@
         <div class="col s12 textcard" *ngFor="let item of items" cdkDrag [cdkDragData]="item">
                 <span [ngStyle]="{'font-family': item.selectedFont, 'color': item.selectedColor, 'font-size': item.selectedSize + 'px', 'font-style': item.selectedStyle}"
                 class="card-title">{{item.content}}</span>
+               <i (click)="removeText(item)" class="material-icons white-text link right">delete</i>
+
         </div>
     </div>
 </div>
