--- a/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.css
+++ b/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.css
@@ -1,8 +1,19 @@
 .game-logo{
     max-width: 100px;
     max-height: 100px;
+}
+
+.game-logo-container{
+    height: 100%;
+    width:100px;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
     position: absolute !important;
     top: 0px !important;
     left: 0px !important;
     z-index: 9999;
+
 }
