--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -8,7 +8,7 @@
     <i *ngIf="!closed"  class="material-icons-outlined arrow">expand_more</i>
     <i *ngIf="closed" class="material-icons-outlined arrow">expand_less</i></button>
   <div id="components" class="row components-container small" (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
-    <div class="component" *ngFor="let component of components" cdkDrag [cdkDragData]="component">
+    <div class="component" *ngFor="let component of components | reverse" cdkDrag [cdkDragData]="component">
       <img src="{{component.imagem}}" class="component-image" alt="">
       <p>{{component.name}}</p>
       <i (click)="removeComponent(component)" class="material-icons white-text link right">delete</i>
