--- a/src/app/creator/shared/prompt-input/prompt-input.component.html
+++ b/src/app/creator/shared/prompt-input/prompt-input.component.html
@@ -1,10 +1,10 @@
 <div class="input-field col m12 top-0 bottom-0">
-    <textarea #prompt style="height: 40px;" name="prompt" id="prompt" class="prompt-input browser-default top-0 bottom-0" formControlName="prompt"></textarea>
+    <textarea #promptarea style="height: 40px;" [(ngModel)]="prompt" style="height: 40px;"  name="prompt" id="prompt" class="prompt-input browser-default top-0 bottom-0"></textarea>
 </div>
 <div class="col m12 valign-wrapper">
-    <app-ai-button [label]="label" class="valign" (click)="generate(prompt.value)"></app-ai-button>
+    <app-ai-button [label]="label" class="valign" (click)="generate(promptarea.value)"></app-ai-button>
     <i *ngIf="!hideSpinner" class="material-icons spinner sufix valign left-1">autorenew</i>
-    <select id="styleSelect"  (change)="onStyleChange($event)" style="width: 200px;" class="browser-default small left-1 bottom-1 col s12 left">
+    <select id="styleSelect" *ngIf="isImage"  (change)="onStyleChange($event)" style="width: 200px;" class="browser-default small left-1 bottom-1 col s12 left">
         <option value="">selecionar estilo</option>
         <option *ngFor="let style of styles" [value]="style">{{ style }}</option>
     </select>
