--- a/src/app/testing/players/players.component.css
+++ b/src/app/testing/players/players.component.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-between;
+    justify-content: start;
     gap:10px;
     z-index:1
 }
