--- a/src/app/creator/creator-nav/creator-nav.component.html
+++ b/src/app/creator/creator-nav/creator-nav.component.html
@@ -18,12 +18,16 @@
         <h3 class="valign-wrapper"><i class="material-icons valign ">science</i>
           TESTAR JOGO</h3>
       </li>
+      <li class="hoverable" routerLink="./checkout">
+        <h3 class="valign-wrapper"><i class="material-icons valign ">shopping_basket</i>
+          CHECKOUT</h3>
+      </li>
     </ul>
     
     <ul id="tool-link" class="right hide-on-med-and-down">
       <li><a ><i class="material-icons grey-text">search</i></a></li>
       <li><a ><i class="material-icons grey-text">visibility</i></a></li>
-      <li><a [routerLink]="'./home'" ><i class="material-icons grey-text">home</i></a></li>
+      <li><a [routerLink]="'/creator'" ><i class="material-icons grey-text">home</i></a></li>
       <li><a ><i class="material-icons grey-text">account_circle</i></a></li>
     </ul>
   </div>
