--- a/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.html
+++ b/src/app/creator/gameform/jogo/jogo-preview/jogo-preview.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="col m12 left">
         <label class="col m5 title purple-text">Sinopse</label>
-        <label class="col m7 title pink-text">{{gamedataservice.game.sinopse}}</label>
+        <label class="col  title pink-text">{{gamedataservice.game.sinopse}}</label>
       </div>
     </div>
     <div class="row container">
