--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,6 +1,8 @@
 <nav>
   <div class="nav-wrapper">
-    <a routerLink="/" class="" hidden >{{appTitle}}</a>
+    <a href="#!" class="brand-logo">
+      <img src="assets/img/logo.png" alt="" class="logo">
+    </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a [ngxScrollTo]="'#hero'"> Home</a></li>
       <li><a [ngxScrollTo]="'#sobre'">Build-A-Board</a></li>
