--- a/src/styles.css
+++ b/src/styles.css
@@ -520,7 +520,7 @@ h6.loginsubtitle{
 	font-size: 17px !important;
 }
 
-.firebaseui-idp-button, .purple {
+.firebaseui-idp-button{
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	background-color: #7d4886 !important;
 	border-radius: 20px !important;
