--- a/src/app/checkout/checkout-final/checkout-final.component.html
+++ b/src/app/checkout/checkout-final/checkout-final.component.html
@@ -1,1 +1,4 @@
-<p>checkout-final works!</p>
+<h6 class="bottom-5 loginsubtitle">Muito bem, recebemos seu pedido!</h6>
+<div class="row">
+    <p>Em breve nossa equipe de vendas entrará em contato com você!</p>
+  </div>
