--- a/src/app/testing/controls/controls.component.html
+++ b/src/app/testing/controls/controls.component.html
@@ -5,11 +5,12 @@
         <h1 class="top-0 bottom-2">{{testing.currentRound}}</h1>
     </div>
     <div id="controls-container">
-        <app-control-item *ngFor="let control of testing.controls" [control]="control" (click)="controlSelected($event)"></app-control-item>
+        <app-control-item *ngFor="let control of testing.controls" [control]="control" (click)="controlSelected(control)"></app-control-item>
     </div>
 </div>
 
-<div id="activeControl" class="component" [hidden]="!testing.activeControl" >
-    <img src="{{testing.activeControl?.imagem}}" class="component-image" [ngClass]="testing.activeControl?.classname" alt="">
-    <!-- <p class="component-name">{{control.classname}}</p> -->
+<div id="activeControl" class="component center" [hidden]="!testing.activeControl" >
+    <i (click)="testing.activeControl = null" class="material-icons purple link">close</i>
+    <img src="{{testing.activeControl?.imagem}}" class="component-image center" [ngClass]="testing.activeControl?.classname" alt="">
+    <a class="btn actionbutton" *ngFor="let action of testing.activeControl?.actions" (click)="testCode(action)" >{{action.title}}</a>
 </div>
