--- a/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
+++ b/src/app/creator/gameform/regras/regras-conclusao/regras-conclusao.component.html
@@ -6,8 +6,7 @@
             <h3>Descreva como é definido o vencedor:</h3>
             <ngx-wig  formControlName="vencedor" [placeholder]="''" class="col m12 top-3 bottom-1"
               ></ngx-wig>
-              <app-ai-button label="gerar com IA" class="top-2 left-1" (click)="generateRules('vencedor', this.regrasFormGroup.controls['vencedor'].value)"></app-ai-button> 
-              <i *ngIf="!hidespinner.vencedor" class="material-icons spinner sufix valign left-1">autorenew</i>
+              <app-ai-button  [hideSpinner]="hidespinner.vencedor" label="gerar com IA" class="top-2 left-1" (click)="generateRules('vencedor', this.regrasFormGroup.controls['vencedor'].value)"></app-ai-button> 
           </div>
 
           <div class="col m12 top-5">
@@ -16,8 +15,7 @@
 
             <ngx-wig formControlName="conclusao" [placeholder]="''" class="col m12 top-3 bottom-1"
               >  </ngx-wig>
-              <app-ai-button label="gerar com IA" class="top-2 left-1" (click)="generateRules('conclusao', this.regrasFormGroup.controls['conclusao'].value)"></app-ai-button> 
-              <i *ngIf="!hidespinner.conclusao" class="material-icons spinner sufix valign left-1">autorenew</i>
+              <app-ai-button  [hideSpinner]="hidespinner.conclusao" label="gerar com IA" class="top-2 left-1" (click)="generateRules('conclusao', this.regrasFormGroup.controls['conclusao'].value)"></app-ai-button> 
           </div>
         </div>
 
