--- a/src/app/creator/gameform/regras/regras-objetivo/regras-objetivo.component.html
+++ b/src/app/creator/gameform/regras/regras-objetivo/regras-objetivo.component.html
@@ -7,7 +7,7 @@
             <ngx-wig formControlName="objetivo" [placeholder]="'Descreva o objetivo aqui.'"
               class="col m12 top-3 bottom-1" >
             </ngx-wig>
-            <app-ai-button label="gerar com IA" class="top-2 left-1" (click)="generateRules(this.regrasFormGroup.controls['objetivo'].value)"></app-ai-button> 
+            <app-ai-button [hideSpinner]="hidespinner" label="gerar com IA" class="top-2 left-1" (click)="generateRules(this.regrasFormGroup.controls['objetivo'].value)"></app-ai-button> 
 
           </div>
         </div>
