--- a/src/app/creator/gameform/regras/regras-partida/regras-partida.component.html
+++ b/src/app/creator/gameform/regras/regras-partida/regras-partida.component.html
@@ -11,7 +11,7 @@
                 [placeholder]="'Digite o que ocorre em cada etapa ou rodada da partida.'" class="col m12 top-3 bottom-1"
                 >
               </ngx-wig>
-              <app-ai-button label="gerar com IA" class="top-2 left-1" (click)="generateRules(this.regrasFormGroup.controls['durante'].value)"></app-ai-button> 
+              <app-ai-button  [hideSpinner]="hidespinner" label="gerar com IA" class="top-2 left-1" (click)="generateRules(this.regrasFormGroup.controls['durante'].value)"></app-ai-button> 
 
             </div>
           </div>
