--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,10 @@ select.small, input.small{
     height: 53px;
 }
 
+.step{
+    max-width:200px!important;
+}
+
 .step-content{
   overflow-y: hidden!important;
 }
@@ -343,7 +347,7 @@ a.disabled {
 }
 
 .spinner{
-  color:rgb(124, 92, 137);
+  /* color:rgb(124, 92, 137); */
   animation-name: spin;
   animation-duration: 1000ms;
   animation-iteration-count: infinite;
