--- a/src/app/creator/creator-nav/creator-nav.component.html
+++ b/src/app/creator/creator-nav/creator-nav.component.html
@@ -25,10 +25,11 @@
     </ul>
     
     <ul id="tool-link" class="right hide-on-med-and-down">
-      <li><a ><i class="material-icons grey-text">search</i></a></li>
-      <li><a ><i class="material-icons grey-text">visibility</i></a></li>
+      <li *ngIf="gameservice.game"><a ><i class="material-icons grey-text">search</i></a></li>
+      <li *ngIf="gameservice.game"><a ><i class="material-icons grey-text">visibility</i></a></li>
       <li><a [routerLink]="'/creator'" ><i class="material-icons grey-text">home</i></a></li>
       <li><a ><i class="material-icons grey-text">account_circle</i></a></li>
+      <li><a (click)="logout()" ><i class="material-icons grey-text">logout</i></a></li>
     </ul>
   </div>
 </nav>
