--- a/src/app/creator/shared/searchbar/searchbar.component.html
+++ b/src/app/creator/shared/searchbar/searchbar.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col s12">
-        <input type="text" name="search" class="searchbar browser-default" [(ngModel)]="searchstr">
+        <input type="text" name="search" class="searchbar browser-default"  [(ngModel)]="searchstr" (ngModelChange)="search.emit(searchstr)">
         <i class="material-icons grey-text suffix">search</i>
     </div>
 </div>
