--- a/src/app/creator/creator-nav/creator-nav.component.html
+++ b/src/app/creator/creator-nav/creator-nav.component.html
@@ -3,7 +3,7 @@
     <a href="#!" class="brand-logo">
       <img src="assets/img/logo.png" alt="" class="logo">
     </a>
-    <ul id="main-links" class="left grey-text text-lighten-1" *ngIf="gameservice.game">
+    <ul id="main-links" class="left grey-text text-lighten-1" *ngIf="gameservice.game?.id">
       <li class="hoverable" routerLink="./sobre">
         <h3 class="valign-wrapper">
           <i class="material-icons valign ">fingerprint</i> SOBRE O JOGO</h3>
@@ -24,12 +24,13 @@
       </li>
     </ul>
     
+
     <ul id="tool-link" class="right hide-on-med-and-down">
-      <li *ngIf="gameservice.game"><a ><i class="material-icons grey-text">search</i></a></li>
-      <li *ngIf="gameservice.game"><a ><i class="material-icons grey-text">visibility</i></a></li>
-      <li><a [routerLink]="'/creator'" ><i class="material-icons grey-text">home</i></a></li>
-      <li><a ><i class="material-icons grey-text">account_circle</i></a></li>
-      <li><a (click)="logout()" ><i class="material-icons grey-text">logout</i></a></li>
+      <li *ngIf="gameservice.game?.id"><a >         <i class="material-icons grey-text">search</i></a></li>
+      <li *ngIf="gameservice.game?.id"><a >         <i class="material-icons grey-text">visibility</i></a></li>
+      <li><a [routerLink]="'/creator'">         <i class="material-icons grey-text">home</i></a></li>
+      <li><a [routerLink]="'/creator/profile'"> <i class="material-icons grey-text">account_circle</i></a></li>
+      <li><a (click)="logout()"> <i class="material-icons grey-text">logout</i></a></li>
     </ul>
   </div>
 </nav>
