--- a/src/styles.css
+++ b/src/styles.css
@@ -228,6 +228,20 @@ nav{
       background-color: #dd1199;
   }
 
+  .form{
+    max-width: 50vw;
+    padding: 30px;
+    margin: auto;
+  }
+
+  input[type='text'], input[type='email'], input[type='password']{
+    padding: 4px;
+    border-radius: 9px;
+    border: 1px solid #543696;
+    width:100%;
+    height: 35px;
+  }
+
   input[type='range'] {
     /* overflow: hidden;
     width: 80px;
@@ -441,7 +455,7 @@ a.disabled {
   .suffix{
     position:absolute;
     margin-left: -38px;
-    margin-top: 22px;
+    margin-top: 7px;
   }
 
   nav{
@@ -608,6 +622,32 @@ h6.loginsubtitle{
 }
 
 .overlay{
-  background: rgba(255, 255, 255, 0.6);
+  background: rgba(255, 255, 255, 0.8);
   height: 100vh;
 }
+
+
+.user-photo-container { 
+	position: relative;
+	display: inline-block;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	overflow: hidden;
+  }
+
+  .user-photo-container img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+  }
+
+  .user-icon {
+	margin-left: 0px!important;
+	font-size: 117px;
+	color: #000;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+  }
