melhorando prompt imagem

--- a/src/app/creator/gameform/design/design.component.html
+++ b/src/app/creator/gameform/design/design.component.html
@@ -1,9 +1,9 @@
 <div id="designmain">
-  <app-toolbox id="toolbox" [items]="menuItems" [closed]="creator.closeToolbox" (routeEmitter)="getTool($event)"></app-toolbox>
+  <app-toolbox id="toolbox" [items]="menuItems" (routeEmitter)="getTool($event)"></app-toolbox>
   <div id="area">
     <app-menu ></app-menu>
     <app-canvas></app-canvas>
-    <app-drawer [closed]="creator.closedrawer" ></app-drawer>
+    <app-drawer></app-drawer>
     <app-modifiers-panel></app-modifiers-panel>
   </div>  
 </div>
