--- a/src/app/creator/gameform/design/modifiers/modifiers-panel/modifiers-panel.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifiers-panel/modifiers-panel.component.html
@@ -1,6 +1,6 @@
 
 <ul [id]="modifiers" class="modifiers-panel">
-    <li class="step" *ngFor="let modifier of modifiers; index as i">
+    <li class="modifier" *ngFor="let modifier of modifiers; index as i">
       <app-modifier [modifier]="modifier"></app-modifier>
     </li>
   </ul>
