--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -1,11 +1,8 @@
 
-<div id="canvas" cdkDropList (cdkDropListDropped)="creator.dropElement($event)" cdkDropListConnectedTo="components" class="design-canvas" >
+<div id="canvas" cdkDropList (cdkDropListDropped)="dragservice.dropElement($event)" cdkDropListConnectedTo="components" class="design-canvas" >
 </div>
 
-<div id="editableObject" [ngStyle]="{'zoom': creator.zoomValue/100}" cdkDragBoundary="#canvas" 
-[cdkDragDisabled]="creator.isDragDisabled"
-cdkDrag cdkDropList (cdkDropListDropped)="creator.dropText($event)" cdkDropListConnectedTo="text-container"
-class="editable-object"></div>
-
-<div class="message">{{creator.message}}</div>
-dhay
+<div id="editableObject" [ngStyle]="{'zoom': creator.zoomValue/100}" cdkDragBoundary="#canvas" cdkDrag cdkDropList (cdkDropListDropped)="dragservice.dropElement($event)" class="editable-object">
+    <img alt="" class="background-img" id="background-img">
+    <div id="{{element.id}}" *ngFor="let element of elements.addedElements" cdkDrag cdkDragBoundary="#editableObject"></div>
+</div>
