--- a/src/app/creator/gameform/design/canvas/canvas.component.css
+++ b/src/app/creator/gameform/design/canvas/canvas.component.css
@@ -16,5 +16,12 @@
     position: absolute;
     top: 17%;
     left: 30%;
+}
 
+#background-img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
