--- a/src/app/creator/shared/toolbox/toolbox.component.html
+++ b/src/app/creator/shared/toolbox/toolbox.component.html
@@ -11,7 +11,7 @@
 </div>
 
 <div id="toolbox-drawer" [ngClass]="{'closed': drawer.closeToolbox}">
-    <button (click)="drawer.toggleToolbox()" aria-label="Mostrar páginas" class="BIeccA CGQFuA"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 16"
+    <button (click)="drawer.closeToolBox()" aria-label="Mostrar páginas" class="BIeccA CGQFuA"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 16"
         width="96" height="16" fill="rgb(48, 48, 48)">
         <path class="Axi_6A" d="M0 16v-4c20 0 12-12 32-12h32c20 0 12 12 32 12V16z"></path>
         <path class="zl9Kag" d="M0 12.5c20 0 12-12 32-12h32c20 0 12 12 32 12"></path>
